autotest/tests/preprocessor/dq_preproc_test1.dq
// single line comment: this is a dq test program

/*
  multi
  line
  comment
  #define NOT_DEFINED
*/

// #{invalid directive}  // directive in comment
// #invalid2

#define DEFINED1

#define GLOBVAR3_VALUE = 55

#ifdef DEFINED1

  var globvar1 : int = #{ifdef DEFINED2} 11 #{else} 22 #{endif};

  #define DEFVAR = 5

#{elifdef NOT_DEFINED}

  var globvar1 : int = 2;

  #ifdef DEFINED2
  #else
  #endif

#{else}

  // inactive code test
  /*
    multi-line comment
  */

  var s : stringa = " #{endif} ";  // #{endif} in string and comment

  varxxx blabla;  // this is an invalid statement

  var platformvar : int = 3;

#{endif}

#if DEFVAR > 3

   var globvar2 : int = 5;

#endif

#{define LIN}  // error

var globvar3 : int = @def.GLOBVAR3_VALUE;

// the second

/* some more comment

  */  var globvar4 : int = 44;

#{include "dq_preproc_inc1.dqi"}

// include once more, with the other quotes

#{include 'dq_preproc_inc1.dqi' }

var globvar6 : int = 66;

// showing the rsults

[[external]] function printf(fmt : ^cchar, ...) -> int;

function main() -> int:
  printf("DQ Pre-Processor (source code feeder) test:\n\n");     //?ignore('DQ Pre-Processor (source code feeder) test:')

  printf("globvar1 = %i\n", globvar1);           //?check(globvar1, 22)
  printf("globvar2 = %i\n", globvar2);           //?check(globvar2, 5)
  printf("globvar3 = %i\n", globvar3);           //?check(globvar3, 55)
  printf("globvar4 = %i\n", globvar4);           //?check(globvar4, 44)
  printf("globvar6 = %i\n", globvar6);           //?check(globvar6, 66)

  printf("includevar1 = %i\n", includevar1);     //?check(includevar1, 101)
  printf("includevar2 = %i\n", includevar2);     //?check(includevar2, 2033)
  printf("includevar21 = %i\n", includevar21);   //?check(includevar21, 2101)

  return 0;
endfunc